<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:text="@string/fieldGoals"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:text="@string/offReb"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:text="@string/assists"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:text="@string/fouls"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:text="@string/points"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/fgp"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/orgp"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/apg"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/pfpg"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/ppg"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:text="@string/threePointers"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:text="@string/defReb"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:text="@string/steals"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:text="@string/blocks"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tpp"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/drpg"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/spg"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/bpg"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:text="@string/freeThrows"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:text="@string/totalReb"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:text="@string/turnovers"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:text="@string/oPoints"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/ftp"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/trpg"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tpg"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/oppg"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
        </TableRow>
    </TableLayout>
</HorizontalScrollView>