<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/av_stats"/>
        <TextView
            android:id="@+id/ppg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/average"
            android:text="@string/points"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/ppg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_digit_double_ex"
            android:layout_below="@id/average"
            android:layout_toEndOf="@id/ppg_text"/>
        <TextView
            android:id="@+id/rpg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/average"
            android:text="@string/totalReb"
            android:layout_toStartOf="@id/rpg"/>
        <TextView
            android:id="@+id/rpg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_digit_double_ex"
            android:layout_below="@id/average"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/apg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ppg_text"
            android:text="@string/assists"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/apg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_digit_double_ex"
            android:layout_below="@id/ppg"
            android:layout_toEndOf="@id/apg_text"/>
        <TextView
            android:id="@+id/mpg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rpg_text"
            android:text="@string/minutes"
            android:layout_toStartOf="@id/mpg"/>
        <TextView
            android:id="@+id/mpg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_digit_double_ex"
            android:layout_below="@id/rpg"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/spg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/apg_text"
            android:text="@string/steals"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/spg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_digit_double_ex"
            android:layout_below="@id/apg"
            android:layout_toEndOf="@id/spg_text"/>
        <TextView
            android:id="@+id/topg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mpg_text"
            android:text="@string/turnovers"
            android:layout_toStartOf="@id/topg"/>
        <TextView
            android:id="@+id/topg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_digit_double_ex"
            android:layout_below="@id/mpg"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/bpg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spg_text"
            android:text="@string/blocks"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/bpg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_digit_double_ex"
            android:layout_below="@id/spg"
            android:layout_toEndOf="@id/bpg_text"/>
        <TextView
            android:id="@+id/fgp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bpg_text"
            android:text="@string/fieldGoals"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/fgp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_digit_double_ex"
            android:layout_below="@id/bpg"
            android:layout_toEndOf="@id/fgp_text"/>
        <TextView
            android:id="@+id/tpp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bpg_text"
            android:text="@string/threePointers"
            android:layout_toStartOf="@id/tpp"/>
        <TextView
            android:id="@+id/tpp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_digit_double_ex"
            android:layout_below="@id/bpg"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/ftp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fgp_text"
            android:text="@string/freeThrows"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/ftp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_digit_double_ex"
            android:layout_below="@id/fgp"
            android:layout_toEndOf="@id/ftp_text"/>
        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ftp_text"
            android:text="@string/total_stats"/>
        <TextView
            android:id="@+id/assists_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/total"
            android:text="@string/totalAssists"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/assists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/total"
            android:layout_toEndOf="@id/assists_text"/>
        <TextView
            android:id="@+id/blocks_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/total"
            android:text="@string/blocks"
            android:layout_toStartOf="@id/blocks"/>
        <TextView
            android:id="@+id/blocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/total"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/steals_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/assists"
            android:text="@string/totalSteals"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/steals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/assists"
            android:layout_toEndOf="@id/steals_text"/>
        <TextView
            android:id="@+id/turnovers_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/blocks_text"
            android:text="@string/totalTO"
            android:layout_toStartOf="@id/turnovers"/>
        <TextView
            android:id="@+id/turnovers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/blocks"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/off_reb_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/steals_text"
            android:text="@string/totalOffReb"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/off_reb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/steals"
            android:layout_toEndOf="@id/off_reb_text"/>
        <TextView
            android:id="@+id/def_reb_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/turnovers_text"
            android:text="@string/totalDefReb"
            android:layout_toStartOf="@id/blocks"/>
        <TextView
            android:id="@+id/def_reb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/turnovers"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/reb_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/off_reb_text"
            android:text="@string/totalRebs"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/reb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/off_reb"
            android:layout_toEndOf="@id/reb_text"/>
        <TextView
            android:id="@+id/fgm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reb_text"
            android:text="@string/fgm"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/fgm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/reb"
            android:layout_toEndOf="@id/fgm_text"/>
        <TextView
            android:id="@+id/fga_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reb_text"
            android:text="@string/fga"
            android:layout_toStartOf="@id/fga"/>
        <TextView
            android:id="@+id/fga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/reb"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/tpm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fgm_text"
            android:text="@string/tpm"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/tpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/fgm"
            android:layout_toEndOf="@id/tpm_text"/>
        <TextView
            android:id="@+id/tpa_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fga_text"
            android:text="@string/tpa"
            android:layout_toStartOf="@id/tpa"/>
        <TextView
            android:id="@+id/tpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/fga"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/ftm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tpm_text"
            android:text="@string/ftm"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/ftm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/tpm"
            android:layout_toEndOf="@id/ftm_text"/>
        <TextView
            android:id="@+id/fta_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tpa_text"
            android:text="@string/fta"
            android:layout_toStartOf="@id/fta"/>
        <TextView
            android:id="@+id/fta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/tpa"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/fouls_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ftm_text"
            android:text="@string/pFouls"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/fouls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/ftm"
            android:layout_toEndOf="@id/fouls_text"/>
        <TextView
            android:id="@+id/points_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fouls_text"
            android:text="@string/totalPoints"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/fouls"
            android:layout_toEndOf="@id/points_text"/>
        <TextView
            android:id="@+id/played_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/points_text"
            android:text="@string/gamesPlayed"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/points"
            android:layout_toEndOf="@id/played_text"/>
        <TextView
            android:id="@+id/started_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/points_text"
            android:text="@string/gamesStarted"
            android:layout_toStartOf="@id/started"/>
        <TextView
            android:id="@+id/started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/points"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/plus_minus_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/played_text"
            android:text="@string/plusMinus"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/plus_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_digit_ex"
            android:layout_below="@id/played"
            android:layout_toEndOf="@id/plus_minus_text"/>
    </RelativeLayout>
</ScrollView>