<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageButton
                    android:id="@+id/button_navigation"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/navigation" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher"
            android:layout_below="@id/toolbar"
            />
        <TextView
            android:id="@+id/team_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_toEndOf="@id/logo"
            android:text="@string/team_ex"/>
        <TextView
            android:id="@+id/conference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_name"
            android:layout_toEndOf="@id/logo"
            android:text="@string/eastConf"/>
        <TextView
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/conference"
            android:layout_toEndOf="@id/logo"
            android:text="@string/southeastDiv"/>
        <TextView
            android:id="@+id/head_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/division"
            android:layout_toEndOf="@id/logo"
            android:text="@string/headCoach"/>
        <TextView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/division"
            android:layout_toEndOf="@id/head_text"
            android:text="@string/head_ex"/>
        <HorizontalScrollView
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="130dp"
                android:text="@string/basic_info"
                android:onClick="onRosterClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="130dp"
                android:text="@string/season_stats"
                android:onClick="onStatsClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="130dp"
                android:text="@string/career_stats"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="130dp"
                android:text="@string/teams"/>
        </LinearLayout>
        </HorizontalScrollView>
        <LinearLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/buttons"/>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/side_menu_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">
        <fragment
            android:id="@+id/side_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:name="com.example.nbastats.navigation.NavFragment"
            tools:layout="@layout/side_menu_fragment"/>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>